CSR view was added

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
               <a class="nav-link" href="{% url 'ca_intermediate:caim' %}">SetUp Root CA/IM</a>
             </li> 
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'csr_cert:csr' %}">CSR+Certificate</a>
+            </li> 
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
               </li>
           </ul>
