modal added to show certs

--- a/templates/csr_page.html
+++ b/templates/csr_page.html
@@ -9,7 +9,43 @@
                 {% csrf_token %}
                 <input class="btn btn-primary" type="submit" value="Sign CSR">
             </form>
+            <br>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                Show certs
+            </button>
         </div>
+        
     </div>
+    
+    <!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Generated certs</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p> <b>CSR:</b></p>
+          {{csr}}
+          <br> <br>
+          <p> <b>Certificate:</b></p>
+          {{cert}}
+          <br> <br>
+          <p> <b>Key:</b></p>
+          {{key}}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock body_block %}
 
