upload csr page added

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="{% url 'csr_cert:csr' %}">CSR+Certificate</a>
             </li> 
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'csr_cert:cssr' %}">Upload CSR</a>
+            </li> 
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
               </li>
           </ul>
