--- a/templates/caim_page.html
+++ b/templates/caim_page.html
@@ -3,18 +3,21 @@
 {% block body_block %}
     <div class="container">
         <div class="jumbotron">
-           <h1>SetUp Root CA/IM :</h1>
+           <h1>SetUp <span id="changeit"></span> CA :</h1>
            <form method="post">
                 {{ form.as_p }}
                 {% csrf_token %}
-                <input class="btn btn-primary" type="submit" value="SetUp Root CA/IM">
+                <input class="btn btn-primary" type="submit" id="submitit" value="SetUp Root CA/IM">
             </form>
             <br>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 Show certs
             </button>
+            <a id="dwld" href="{{path}}" class="btn btn-primary" download>Download certs</a>
         </div>
     </div>
+    <p id='temp' style="display: none;">{{size}}</p>
+    
 
     <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -36,5 +39,23 @@
       </div>
     </div>
   </div>
+
+
+  <script>
+    // val = Number(document.getElementById('temp').textContent)
+
+    // if(val == 0){
+    //   document.getElementById('id_set_issuer').disabled = true
+    //   document.getElementById('changeit').innerHTML = 'Root'
+    // } else {
+    //   document.getElementById('changeit').innerHTML = 'Intermediate'
+    //   var x = document.getElementById('id_set_issuer')
+    //   x.remove(x.selectedIndex)
+    // }
+
+    document.getElementById('submitit').onclick = function() {
+      alert("Certs Generated...")
+    }
+  </script>
 {% endblock body_block %}
 
