--- a/templates/csr_two.html
+++ b/templates/csr_two.html
@@ -24,6 +24,8 @@
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 Show certs
             </button>
+            <a href="{{path}}" class="btn btn-primary" download>Download certs</a>
+            <a href="http://127.0.0.1:8000/csr_cert/certChain/{{id}}" class="btn btn-primary">Download cert chain</a>
         </div>
 
     </div>
