--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
               <a class="nav-link" href="{% url 'csr_cert:cssr' %}">Upload CSR</a>
             </li> 
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'csr_cert:certs' %}">Certs List</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
               </li>
           </ul>
