--- a/templates/csr_page.html
+++ b/templates/csr_page.html
@@ -33,13 +33,13 @@
         </div>
         <div class="modal-body">
           <p> <b>CSR:</b></p>
-          {{csr}}
+          <pre>{{csr}}</pre>
           <br> <br>
           <p> <b>Certificate:</b></p>
-          {{cert}}
+          <pre>{{cert}}</pre>
           <br> <br>
           <p> <b>Key:</b></p>
-          {{key}}
+          <pre>{{key}}</pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
