--- a/templates/caim_page.html
+++ b/templates/caim_page.html
@@ -31,7 +31,7 @@
         </div>
         <div class="modal-body">
           <p> <b>Certificate:</b></p>
-          {{cert}}
+          <pre>{{cert}}</pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
