--- a/templates/csr_two.html
+++ b/templates/csr_two.html
@@ -42,7 +42,7 @@
         </div>
         <div class="modal-body">
           <p> <b>Certificate:</b></p>
-          {{cert}}
+          <pre>{{cert}}</pre>
           <br> <br>
         </div>
         <div class="modal-footer">
